# bamnostic

./: .appveyor.yml  .flake8  .gitignore  .readthedocs.yaml  .stickler.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  codemeta.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  testing.bam
.github/ISSUE_TEMPLATE/: bug_report.md
.ipynb_checkpoints/: README-checkpoint.md
.travis/: push.sh
bamnostic/: README.md  __init__.py  bai.py  bam.py  bgzf.py  core.py  csi.py  setup.py  utils.py
bamnostic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bamnostic/bamnostic/: bai.py  bam.py  bgzf_reader.py  utils.py
bamnostic/tests/: test_bam.py  test_bgzf_reader.py
docs/: Makefile  environment.yaml  make.bat  requirements.txt
docs/paper/: codemeta.json  paper.bib  paper.md
docs/source/: bamnostic.rst  conf.py  index.rst  modules.rst  quickstart.rst  support.rst  tests.rst
tests/: test_build.py  test_placeholder.py
